--- a/Gestione Ricevimenti/Gestione Ricevimenti/StudentHomePage.xaml
+++ b/Gestione Ricevimenti/Gestione Ricevimenti/StudentHomePage.xaml
@@ -37,6 +37,10 @@
                 BindingContext="RicevimentoHomePageResp"
                 SelectionMode="None"
                 ItemTapped="EventDetail" 
+                IsPullToRefreshEnabled="True"
+                Refreshing="Refresh"
+              
+                
                  
                      
                >
@@ -62,6 +66,7 @@
         <ContentView x:Name="popupStudentEvent"  BackgroundColor="#C0808080" IsVisible="False" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All">
             <ScrollView>
             <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds=".5,1,.5,1"  VerticalOptions="CenterAndExpand" BackgroundColor="White" Margin="20,20" Orientation="Vertical" Spacing="10">
+                <ActivityIndicator x:Name="Indicator" IsRunning="True" IsVisible="True" HorizontalOptions="Center" VerticalOptions="StartAndExpand"/>
                 <StackLayout VerticalOptions="StartAndExpand"  Margin="30,30, 30, 10" Orientation="Horizontal">
                     <Label x:Name="labelDocente"  Text="Docente : " HorizontalOptions="StartAndExpand" VerticalOptions="StartAndExpand" />
                     <Label x:Name="dataDocente"   HorizontalOptions="EndAndExpand" VerticalOptions="StartAndExpand" />
